force-app/main/default/objects/SteelFamily__mdt/SteelFamily__mdt.object-meta.xml
<CustomObject>
    <label>Steel Family</label>
    <pluralLabel>SteelFamily</pluralLabel>
</CustomObject>