force-app/main/default/objects/SteelFamily__mdt/fields/Facet__c.field-meta.xml
<CustomField>
    <fullName>Facet__c</fullName>
    <label>Facet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RSMP</fullName>
                <default>true</default>
                <label>RSMP</label>
            </value>
            <value>
                <fullName>SGMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>