force-app/main/default/objects/SteelFamily__mdt/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WHEEL_CARBON</fullName>
                <default>true</default>
                <label>WHEEL_CARBON</label>
            </value>
            <value>
                <fullName>WHEEL_ALLOY</fullName>
            </value>
            <value>
                <fullName>STRUCTURAL</fullName>
            </value>
            <value>
                <fullName>PRESSURE</fullName>
            </value>
            <value>
                <fullName>MECHANICAL</fullName>
            </value>
            <value>
                <fullName>ALLOY</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>